// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList: Component should render card with job 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    primaryMenuItems={Array []}
    projectId="1"
    secondaryMenuItems={Array []}
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent="No Data Sources"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Views
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <FormattedMessage
            defaultMessage="Loading..."
            id="project.dataSourceList.loading"
            values={Object {}}
          />
        }
        key="0"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    primaryMenuItems={Array []}
    projectId="1"
    secondaryMenuItems={Array []}
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent="No Data Sources"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Views
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <FormattedMessage
            defaultMessage="Loading..."
            id="project.dataSourceList.loading"
            values={Object {}}
          />
        }
        key="0"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                246
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                11
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Views
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        key="1"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                246
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                11
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)>
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Views
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        key="2"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    primaryMenuItems={Array []}
    projectId="1"
    secondaryMenuItems={Array []}
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent="No Data Sources"
  >
    <styled.section />
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
